
if(CUDA_FOUND)
    message(STATUS "CUDA")
    add_subdirectory(gpu)
endif(CUDA_FOUND)

add_library(mcsimCommandLine mcsimCommandLine.cxx)
add_library(analyzePyrkovaCommandLine analyzePyrkovaCommandLine.cxx)
add_library(TriangularLattice TriangularLattice.cpp LattExchanger.cpp )
add_library(Metropolis Metropolis.cpp)
add_library(KawasakiSimulation KawasakiSimulation.cpp)
add_library(ClustersAnalyzer ClustersAnalyzer.cpp)
add_library(Atom Atom.cpp)
add_executable(mcsim mcsimCommandLine TriangularLattice.cpp LattExchanger.cpp mcsim.cpp)
add_executable(analyze analyze.cpp)
add_executable(analyzePyrkova analyzePyrkova.cpp)
if(CUDA_FOUND)
    target_link_libraries(mcsim Metropolis_cuda)
else(CUDA_FOUND)
    target_link_libraries(mcsim Metropolis KawasakiSimulation)
endif(CUDA_FOUND)
target_link_libraries(analyzePyrkova ClustersAnalyzer Atom
    analyzePyrkovaCommandLine)
